# GBLab

./: .clang-format  .gitignore  CMakeLists.txt  PLAN.md
.github/workflows/: build_and_test.yml
assets/saves/: clicker.sav
src/: Config.cpp  Config.hpp  MathUtils.hpp  Utils.hpp  main.cpp  main.hpp
src/Components/: Button.cpp  Button.hpp  Icon.cpp  Icon.hpp  Label.cpp  Label.hpp
src/Core/: Application.cpp  Application.hpp  StateManager.cpp  StateManager.hpp
src/Core/Config/: Config.hpp
src/Core/Tools/: Tools.cpp  Tools.hpp
src/States/: ClickerState.cpp  ClickerState.hpp  HubState.cpp  HubState.hpp  LogViewState.cpp  LogViewState.hpp  State.hpp
tests/: main_test.cpp
